--- a/index.html
+++ b/index.html
@@ -9,8 +9,12 @@
 </head>
 <body>
     <h1>Zombie Runner</h1>
-
-    <canvas width="500px" height="400px">
+    <div id="description">
+        <p>The user of the game plays as a survivor in a post-apocoliptic, zombie infested, landscape. The survivor is tasked with venturing into the world to find valuable items in order to stay alive.</p>
+        <p>Use the keyboard arrow-keys to move your player around the board.</p>
+    </div>
+    
+    <canvas width="700px" height="500px">
         Gameboard
     </canvas>
 
