Created a new JS dir and classes.js file and linked to app.js

--- a/index.html
+++ b/index.html
@@ -18,6 +18,6 @@
         Gameboard
     </canvas>
 
-<script src="./app.js"></script>
+<script type="module" src="./JS/app.js"></script>
 </body>
 </html>
