Got a static player to render on my canvas, created game assets, refactoring needed

--- a/index.html
+++ b/index.html
@@ -18,6 +18,22 @@
         Gameboard
     </canvas>
 
+    <div class="imgs player-idle-div">
+        <img src="./assets/player-idle/tile000.png" alt="" class="player-idle">
+        <img src="./assets/player-idle/tile001.png" alt="" class="player-idle">
+        <img src="./assets/player-idle/tile002.png" alt="" class="player-idle">
+        <img src="./assets/player-idle/tile003.png" alt="" class="player-idle">
+    </div>
+    <div class="imgs zombie-idle-div">
+        <img src="./assets/zombie-idle/zombie-idle/tile000.png" alt="" class="zombie-idle">
+        <img src="./assets/zombie-idle/zombie-idle/tile001.png" alt="" class="zombie-idle">
+    </div>
+    <div class="imgs chonker-idle-div">
+        <img src="./assets/zombie-idle/chonker-idle/tile000.png" alt="" class="chonker-idle">
+        <img src="./assets/zombie-idle/chonker-idle/tile001.png" alt="" class="chonker-idle">
+    </div>
+    
+
     <div id="winGame">
         <h1>You WIN!</h1>
     </div>
@@ -26,5 +42,6 @@
     </div>
 
 <script type="module" src="./JS/app.js"></script>
+<script type="module" src="./JS/classes.js"></script>
 </body>
 </html>
