Improted valuables chest imgs and rendered img as valuable

--- a/index.html
+++ b/index.html
@@ -32,6 +32,15 @@
         <img src="./assets/zombie-idle/chonker-idle/tile000.png" alt="" class="chonker-idle">
         <img src="./assets/zombie-idle/chonker-idle/tile001.png" alt="" class="chonker-idle">
     </div>
+    <div class="imgs treasure-chests-div">
+        <img src="./assets/treasure-chests/tile000.png" alt="" class="chest-closed">
+        <img src="./assets/treasure-chests/tile001.png" alt="" class="chest-closed">
+        <img src="./assets/treasure-chests/tile002.png" alt="" class="chest-closed">
+
+        <img src="./assets/treasure-chests/tile003.png" alt="" class="chest-open">
+        <img src="./assets/treasure-chests/tile004.png" alt="" class="chest-open">
+        <img src="./assets/treasure-chests/tile005.png" alt="" class="chest-open">
+    </div>
     
 
     <div id="winGame">
