Added game-start, game-win, game-lose images and implimented a startBtn

--- a/index.html
+++ b/index.html
@@ -18,6 +18,11 @@
         Gameboard
     </canvas>
 
+    <div id="btnDiv">
+        <button id="startBtn">START</button>
+        <button id="resetBtn">RESET</button>
+    </div>
+
     <div class="imgs player-idle-div">
         <img src="./assets/player-idle/tile000.png" alt="" class="player-idle">
         <img src="./assets/player-idle/tile001.png" alt="" class="player-idle">
@@ -42,12 +47,14 @@
         <img src="./assets/treasure-chests/tile005.png" alt="" class="chest-open">
     </div>
     
-
+    <div id="gameStart">
+        <img src="https://cdn6.f-cdn.com/files/download/90050184/game-langu.jpg" alt="">
+    </div>
     <div id="winGame">
-        <h1>You WIN!</h1>
+        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRJqXZdxa2-MKF4Q7ZHtNmMlLXFiybXiVrI3yS6VPVeknBJJ62erpasQdVHexqrkxT0A9E&usqp=CAU" alt="">
     </div>
     <div id="loseGame">
-        <h1>You LOSE!</h1>
+        <img src="https://cdn.gamer-network.net/2020/articles/2020-05-29-11-37/five-of-the-best-game-over-screens-1590748640300.jpg/EG11/thumbnail/1920x1076/format/jpg/quality/80" alt="">
     </div>
 
 <script type="module" src="./JS/app.js"></script>
