Styled index.html and added a Level class to impliment levels

--- a/index.html
+++ b/index.html
@@ -5,12 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Zombie-Runner</title>
+    <!-- GOOGLE FONTS -->
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
     <h1 id="gameTitle">Zombie Runner</h1>
     <div id="description">
-        <p>The user of the game plays as a survivor in a post-apocoliptic, zombie infested, landscape. The survivor is tasked with venturing into the world to find valuable items in order to stay alive.</p>
+        <p>Play as a survivor in a post-apocoliptic, zombie infested, landscape. Your task is to venture into the world to find valuable items in order to stay alive.</p>
         <p>Use the a, s, w, d to move your player around the board.</p>
     </div>
     
