Fixed logic to take multiple valuables

--- a/index.html
+++ b/index.html
@@ -26,6 +26,15 @@
         <button id="resetBtn">RESET</button>
     </div>
 
+    <footer>
+        <ul>
+            <li>Assets taken from:</li>
+            <li><a href="https://fartfish.itch.io/zombie-game-asset-pack" target="_blank">fartfish</a></li>
+            <li><a href="https://seliel-the-shaper.itch.io/treasure-chests" target="_blank">seliel-the-shaper</a></li>
+            <li>ColourBox</li>
+        </ul>
+    </footer>
+
     <div class="imgs player-idle-div">
         <img src="./assets/player-idle/tile000.png" alt="" class="player-idle">
         <img src="./assets/player-idle/tile001.png" alt="" class="player-idle">
