--- a/index.html
+++ b/index.html
@@ -21,9 +21,12 @@
         Gameboard
     </canvas>
 
-    <div id="btnDiv">
-        <button id="startBtn">START</button>
-        <button id="resetBtn">RESET</button>
+    <div id="controler">
+        <p>Level: <span id="levelSpan">1</span></p>
+        <div id="btnDiv">
+            <button id="startBtn">START</button>
+            <button id="resetBtn">RESET</button>
+        </div>
     </div>
 
     <footer>
