Fine tuned some things, added reset shortcut, added the levelDisplay

--- a/index.html
+++ b/index.html
@@ -71,6 +71,7 @@
     <div id="loseGame">
         <img src="https://cdn.gamer-network.net/2020/articles/2020-05-29-11-37/five-of-the-best-game-over-screens-1590748640300.jpg/EG11/thumbnail/1920x1076/format/jpg/quality/80" alt="">
     </div>
+    <div id="nextLevelMsg">Level<span id="nextLevel">1</span></div>
 
 <script type="module" src="./JS/app.js"></script>
 <script type="module" src="./JS/classes.js"></script>
