Fixed levelSpan display

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     </canvas>
 
     <div id="controler">
-        <p>Level: <span id="levelSpan">1</span></p>
+        <p>Level: <span id="levelSpan">1/10</span></p>
         <div id="btnDiv">
             <button id="startBtn">START</button>
             <button id="resetBtn">RESET</button>
